Fix: Change the look of filter box and listings
Part of the listings were cut off and resized the listings. The filter
was showing the whole string of categories, so the longer categories are
now shown with ellipses.

--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,7 @@ select {
 }
 
 li {
-  right: 0px;
-  left: 0px;
-  width: 100%;
+  width: 70%;
   list-style: none;
   padding: 30px;
   border-top: 1px solid #D0D7D9;
